# cpp_py_shmbuf_sample

./: readme.md
cpp_producer/: CMakeLists.txt  bytes_buffer.hpp  shm_buf.cpp  shm_buf.h  shm_producer.cpp
py_consumer/: bytes_buffer.py  mprt_monkeypatch.py  shm_buf.py  shm_buf_consumer.py
